bat.bool1.sleepin.SleepIn.scala.code
def sleepIn(weekday: Boolean, vacation: Boolean): Boolean = {
  if (weekday==false and vacation==false) return true
  if (weekday==true and vacation==true) return true
  else return false
}